--- a/Proyecto1/index.html
+++ b/Proyecto1/index.html
@@ -7,6 +7,37 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="container">
+        <header class="header-all">
+            <div class="header-part1"><h1>Calculadora de Matrices</h1></div>
+            <p>Ingrese las dimensiones de la matriz(ces)  (cuadradas) con las que desea operar y obtenga un resultado</p>
+        </header>
+        <nav class="nav-tab">
+            <ul class="menu">  
+                <li class="nav-opt sumaC" ><a href="suma" >Suma</a></li>        
+                <li class="nav-opt restaC"><a href="resta">Resta</a></li>        
+                <li class="nav-opt multiplicacionM"><a href="multiplicacionMatricial">Multiplicación Matricial</a></li>        
+                <li class="nav-opt multiplicacionE"><a href="multiplicacionEscalar">multiplicación Escalar</a></li>        
+                <li class="nav-opt Transpuesta"><a href="Transpuesta">Transposición de Matriz</a></li>        
+                <li class="nav-opt matrizID"><a href="matrizID">Matriz Identidad</a></li>                        
+                <li class="nav-opt matrizInv"><a href="matrizInv">Matriz Inversa</a></li>
+                <li class="nav-opt Determinante"><a href="Determinante">Determinante</a></li>
+            </ul>
+        </nav>
+    </div>
+
+    <main>
+        <section id="suma"></section>
+        <section id="resta"></section>
+        <section id="multiplicacionMatricial"></section>
+        <section id="multiplicacionEscalar"></section>
+        <section id="Transpuesta"></section>
+        <section id="matrizID"></section>
+        <section id="matrizInv"></section>
+        <section id="Determinante"></section>
+
+    </main>
     
+    <script src="script.js"></script>
 </body>
 </html>
