feat: completed Suma section

--- a/Proyecto1/index.html
+++ b/Proyecto1/index.html
@@ -47,14 +47,14 @@
                     <h3 class="symbol">+</h3>
                     <div class="seccionMatriz" id="seccionSumaMatrizB">Matriz B</div>
                     <h3 class="symbol">=</h3>
-                    <div class ="seccionMatriz id=seccionResultadoMatriz">A+B</div>
+                    <div hidden class ="seccionMatriz" id="seccionSumaResultado">A+B</div>
 
                 </div>
 
                 <div class="seccionButtons">
-                    <input type="button" value="Resultado"        style=" background-color: #2e27aa; color: #fff ; border-radius: 20px ; border-style: none; padding: 5px 10px; font-size: 1rem ;cursor: pointer;transition: all 0.3s ease">
-                    <input type="button" value=" Generar valores" style=" background-color: #2e27aa; color: #fff ; border-radius: 20px ; border-style: none; padding: 5px 10px; font-size: 1rem ;cursor: pointer;transition: all 0.3s ease">
-                    <input type="button" value="Limpiar"          style=" background-color: #2e27aa; color: #fff ; border-radius: 20px ; border-style: none; padding: 5px 10px; font-size: 1rem ;cursor: pointer;transition: all 0.3s ease">
+                    <input id= "btResultadoSuma" type="button" value="Resultado"        style=" background-color: #2e27aa; color: #fff ; border-radius: 20px ; border-style: none; padding: 5px 10px; font-size: 1rem ;cursor: pointer;transition: all 0.3s ease">
+                    <input id= "btLimpiarSuma" type="button" value="Limpiar" style=" background-color: #2e27aa; color: #fff ; border-radius: 20px ; border-style: none; padding: 5px 10px; font-size: 1rem ;cursor: pointer;transition: all 0.3s ease">
+                    <input id= "btGenerarValores" type="button" value=" Generar valores"          style=" background-color: #2e27aa; color: #fff ; border-radius: 20px ; border-style: none; padding: 5px 10px; font-size: 1rem ;cursor: pointer;transition: all 0.3s ease">
                 </div>
             </div>
         </section>
