--- a/Proyecto1/index.html
+++ b/Proyecto1/index.html
@@ -221,13 +221,43 @@
                 </div>
 
                 <div class="seccionButtons">
-                    <input id= "btLimpiarMatrizID" type="button" value="Iniciar" style=" background-color: #2e27aa; color: #fff ; border-radius: 20px ; border-style: none; padding: 5px 10px; font-size: 1rem ;cursor: pointer;transition: all 0.3s ease">
+                    <input id= "btLimpiarMatrizID" type="button" value="Iniciar de nuevo" style=" background-color: #2e27aa; color: #fff ; border-radius: 20px ; border-style: none; padding: 5px 10px; font-size: 1rem ;cursor: pointer;transition: all 0.3s ease">
                 </div>
             </div>
         </section>
 
-        <section id="matrizInv"></section>
-        <section id="Determinante"></section>
+        <section id="matrizInv">
+
+        </section>
+
+        <section class = "seccion" id="Determinante">
+            <div class="headerSeccion">
+                <div class= "SeccionTitle" id="DeterminanteTitle"> <h2>Determinante</h2></div>
+                <div class="headerPanel">
+                    <p>A<sub>n x n</sub>
+                    <input type="number" placeholder="n"  min="2" max="10" id="sizeDeterminante">
+                    <input type="button" value="Crear" id="crearDeterminante" class="botonCrear">
+                </div>
+            </div>
+
+            <div id="contenidoDeterminante" hidden>
+                <div class="matrices-container">
+                    <div class="seccionMatriz" id="seccionDeterminante"><p>A<sub>nxn</sub></p></div>
+                    <h3 class="symbol"><span>&rarr;</span></h3>
+                    <h3 class="symbol" style="margin: 0">&#124</h3>
+                    <h3 class="symbol" style="margin: 0">A</h3>
+                    <h3 class="symbol" style="margin: 0">&#124</h3>
+                    <h3 class="symbol">=</h3>
+                    <div id="seccionDeterminanteResultado"></div>
+                </div>
+
+                <div class="seccionButtons">
+                    <input id= "btResultadoDeterminante" type="button" value="Resultado"        style=" background-color: #2e27aa; color: #fff ; border-radius: 20px ; border-style: none; padding: 5px 10px; font-size: 1rem ;cursor: pointer;transition: all 0.3s ease">
+                    <input id= "btGenerarValoresDeterminante" type="button" value=" Generar valores"          style=" background-color: #2e27aa; color: #fff ; border-radius: 20px ; border-style: none; padding: 5px 10px; font-size: 1rem ;cursor: pointer;transition: all 0.3s ease">
+                    <input id= "btLimpiarDeterminante" type="button" value="Iniciar de nuevo" style=" background-color: #2e27aa; color: #fff ; border-radius: 20px ; border-style: none; padding: 5px 10px; font-size: 1rem ;cursor: pointer;transition: all 0.3s ease">
+                </div>
+            </div>
+        </section>
 
     </main>
     
