--- a/Proyecto1/index.html
+++ b/Proyecto1/index.html
@@ -30,6 +30,7 @@
         <section id="suma">
             <div class="headerSuma">
                 <div id="SumaTitle"> <h2>Suma</h2></div>
+
                 <div class="matrizSInputs"></div>
                 <p>Matriz A</p>
                 <input type="number" placeholder="n"  min="2" max="10" id="sizeMatrizA">
@@ -37,11 +38,24 @@
                 <input type="number" placeholder="n" min="2" max="10" id="sizeMatrizB">
                 <input type="button" value="Crear" id="crearSuma">
             </div>
+
             <div id="contenidoSuma" hidden>
-                <p>Ingrese los valores</p>
-                <input type="button" value="Calcular">
+                <p style="margin: 5px;">Ingrese los valores</p>
 
+                <div id="matrices-container">
+                    <div class="seccionMatriz" id="seccionSumaMatrizA">Matriz A</div>
+                    <h3 class="symbol">+</h3>
+                    <div class="seccionMatriz" id="seccionSumaMatrizB">Matriz B</div>
+                    <h3 class="symbol">=</h3>
+                    <div class ="seccionMatriz id=seccionResultadoMatriz">A+B</div>
 
+                </div>
+
+                <div class="seccionButtons">
+                    <input type="button" value="Resultado"        style=" background-color: #2e27aa; color: #fff ; border-radius: 20px ; border-style: none; padding: 5px 10px; font-size: 1rem ;cursor: pointer;transition: all 0.3s ease">
+                    <input type="button" value=" Generar valores" style=" background-color: #2e27aa; color: #fff ; border-radius: 20px ; border-style: none; padding: 5px 10px; font-size: 1rem ;cursor: pointer;transition: all 0.3s ease">
+                    <input type="button" value="Limpiar"          style=" background-color: #2e27aa; color: #fff ; border-radius: 20px ; border-style: none; padding: 5px 10px; font-size: 1rem ;cursor: pointer;transition: all 0.3s ease">
+                </div>
             </div>
         </section>
 
